# Nabil-gold

./: .env.example  .gitignore  .pre-commit-config.yaml  24-7-updates-changes.patch  ANALYST_LABELS_IMPORT_GUIDE_AR.md  APPLY_INSTRUCTIONS.md  ARENA_REVIEW_REPORT_AR.md  Arena _ Benchmark & Compare the Best AI Models.html  CHANGELOG_NEW_RULE.md  CHANGES_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  FILE_LIST.txt  FINAL_OPERATIONS_RUNBOOK.md  FINAL_REVIEW_AR.md  FIXES_PROFIT_FACTOR.md  FIX_FINNHUB_ERROR.md  GEMINI_PHASE1_NOTES.txt  Nabil_Gold_Roadmap_AR.md  PENDING_ORDERS_SUPABASE_PATCH.sql  PHASE6_ANALYST_DISTILLATION_MIGRATION.sql  PUSH_INSTRUCTIONS.txt  PUSH_NOW.sh  README-FINNHUB-MIGRATION.md  README.md  README_AR.md  README_UPDATED_FILES.txt  README_Ï¬Ï╣Ï»┘è┘äÏºÏ¬_ÏóÏ«Ï▒_Ï¼┘ê┘äÏ®.md  README_Ïº┘äÏ¡Ï▓┘àÏ®_Ïº┘äÏ┤Ïº┘à┘äÏ®.md  README_Ïº┘äÏ¬Ï╣Ï»┘è┘äÏºÏ¬.md  REPORT_AND_FIX_PLAN.md  SPRINT1_SUPABASE_MIGRATION.sql  SPRINT2_SETUP_STATE_MIGRATION.sql  SUPABASE_VERIFICATION_CHECKLIST.sql  TEST_REPORT.md  TRADE_MANAGEMENT_RULES.md  WEEKLY_REPORT_README.md  all-changes.patch  analyst_labels_template.csv  analyst_labels_template.json  (+24 more)
agents/: __init__.py  base_agent.py  classical_agent.py  daily_bias_agent.py  daily_report_agent.py  decision_agent.py  macro_fundamental_agent.py  multitimeframe_agent.py  news_risk_agent.py  open_trades_manager.py  price_action_agent.py  risk_management_agent.py  smc_agent.py  technical_agent.py  trading_session_agent.py
api/: dashboard.js
dashboard/: README_FIX.txt  app.js  index.en.html  index.html  style.css
migrations/: V1_add_side.sql
(+209 files in other folders)
